deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: scw-hub-secret
      containers:
        - name: nginx
          image: "nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: backend
          image: "rg.fr-par.scw.cloud/hydrocamp/backend:latest"
          imagePullPolicy: Always
          ports:
            - name: wsgi
              containerPort: 8000
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
